# E-commerce-Intelligent-Assistant

./: .dockerignore  .gitignore  DEPLOY.md  README.md  deploy.sh  docker-compose.yml
backend/: .env  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/routers/: auth.py  chat.py  conversations.py  docs.py
backend/app/schemas/: request.py  response.py
backend/app/services/: chat_service.py  document_service.py  vector_service.py
backend/scripts/: import_knowledge_base.py
frontend/: .env.production  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/api/: index.js
frontend/src/components/: ChatView.vue  ConversationSidebar.vue  DocumentUpload.vue  LoginView.vue
frontend/src/styles/: notion.css
